single hive image